--- a/greenly/src/app/components/login/login.component.html
+++ b/greenly/src/app/components/login/login.component.html
@@ -5,19 +5,19 @@
             'alert-success' : responseMessage == 'success'
         }">{{responseMessage}}</p>}
         <div class="row g-0">
-            <div class="col-md-6 p-2">
+            <div class="col-md-5">
                 <div class="left-content d-flex justify-content-end">
-                    <img src="./assets/Background Image-1.png" alt="Greenly Logo" class="w-75">
+                    <img src="./assets/Background Image-1.png" alt="Greenly Logo" class="w-100 rounded-2">
                 </div>
             </div>
-            <div class="col-md-6  ps-0 d-flex flex-column justify-content-center align-items-start">
+            <div class="col-md-7  ps-2 d-flex flex-column justify-content-center align-items-center  rounded-2">
                 <div class="right-content-text w-75">
-                    <div class="text border-bottom border-secondary">
+                    <div class="text border-bottom border-secondary text-center">
                         <h1 class="special-font m-0 p-0">Login to your account</h1>
                         <p class="ps-1 text-secondary">Welcome Back!</p>
                     </div>
                 </div>
-                <div class="inputs mt-3 w-100">
+                <div class="inputs mt-3 w-75 mx-auto">
                     <form [formGroup]="loginForm" (ngSubmit)="loginData()">
                         <div class="mb-3">
                             <label for="email" class="form-label special-font fs-3">Email<img
@@ -54,7 +54,7 @@
                                     </div>
                                 }
                         </div>
-                        <button class="btn-main w-75 d-block mx-auto rounded-5">LogIn</button>
+                        <button class="btn-main w-75 d-block mx-auto rounded-5" [disabled]="loginForm.invalid">LogIn</button>
                     </form>
                 </div>
                 <h3 class="fs-6 mt-3 mx-auto fw-bold">Don't have an account? <span class="text-success cursor-pointer"
