blog design done

--- a/greenly/src/app/components/blog/blog.component.html
+++ b/greenly/src/app/components/blog/blog.component.html
@@ -1,1 +1,88 @@
-<p>blog works!</p>
+<section>
+    <div class="container-fluid p-0 ">
+        <div class="bg-main p-4 text-center text-white">
+            <h1 class="special-font mb-3">Blog</h1>
+        </div>
+    </div>
+    <div class="container my-4">
+        <div class="row g-3">
+            <div class="col-md-6">
+                <div class="inner p-3 rounded-3 text-center">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div class="user-info d-flex justify-content-center align-items-center gap-1">
+                            <div class=" fs-5">
+                                <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img" class="rounded-circle" width="30px" height="30px">
+                            </div>
+                            <h2 class="fs-6 pt-2  fw-semibold">Seif Muhammed</h2>
+                        </div>
+                        <div class="date">
+                            <span class="pt-2 fw-semibold text-secondary">Today</span>
+                        </div>
+                    </div>
+                    <div class="post-content my-3">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, magni?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="inner p-3 rounded-3 text-center">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div class="user-info d-flex justify-content-center align-items-center gap-1">
+                            <div class=" fs-5">
+                                <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img" class="rounded-circle" width="30px" height="30px">
+                            </div>
+                            <h2 class="fs-6 pt-2  fw-semibold">Seif Muhammed</h2>
+                        </div>
+                        <div class="date">
+                            <span class="pt-2 fw-semibold text-secondary">Today</span>
+                        </div>
+                    </div>
+                    <div class="post-content my-3">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, magni?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="inner p-3 rounded-3 text-center">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div class="user-info d-flex justify-content-center align-items-center gap-1">
+                            <div>
+                                <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img" class="rounded-circle" width="30px" height="30px">
+                            </div>
+                            <h2 class="fs-6 pt-2  fw-semibold">Seif Muhammed</h2>
+                        </div>
+                        <div class="date">
+                            <span class="pt-2 fw-semibold text-secondary">Today</span>
+                        </div>
+                    </div>
+                    <div class="post-content my-3">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, magni?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="inner p-3 rounded-3 text-center">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div class="user-info d-flex justify-content-center align-items-center gap-1">
+                            <div class=" fs-5">
+                                <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img" class="rounded-circle" width="30px" height="30px">
+                            </div>
+                            <h2 class="fs-6 pt-2  fw-semibold">Seif Muhammed</h2>
+                        </div>
+                        <div class="date">
+                            <span class="pt-2 fw-semibold text-secondary">Today</span>
+                        </div>
+                    </div>
+                    <div class="post-content my-3">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, magni?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="posting d-flex justify-content-center align-items-center gap-2 my-4 w-50 mx-auto">
+                <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img" class="rounded-circle" width="30px" height="30px">
+                <input type="text" class="form-control" placeholder="Share your thoughts...">
+                <button class="btn btn-success" type="button">Post</button>
+            </div>
+    </div>
+</section>
