--- a/greenly/src/app/components/shop/shop.component.css
+++ b/greenly/src/app/components/shop/shop.component.css
@@ -36,3 +36,20 @@ transform: scale(0.95);
 .inner{
     transition: all 0.5s ease-in-out;
 }
+.favorite-circle{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    background-color: #177E3966;
+    transition: all 0.3s ease-in-out;
+}
+.favorite-circle:hover{
+    transform: scale(1.1);
+}
