services design done

--- a/greenly/src/app/components/home/home.component.html
+++ b/greenly/src/app/components/home/home.component.html
@@ -90,28 +90,28 @@
             </div>
             <div class="col-md-4">
                 <div class="inner rounded-3 py-5 px-3">
-                    <img src="./assets/car-side-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
+                    <img src="./assets/car-side-svgrepo-com.svg" alt="Electric Cars" width="70px" height="70px" />
                     <h5 class="special-font mt-5 fs-2">Electric Cars</h5>
                     <p>We assist factories in adopting sustainable methods that boost operational efficiency and significantly reduce their overall environmental footprint.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="inner rounded-3 py-5 px-3">
-                    <img src="./assets/factories-factory-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
+                    <img src="./assets/factories-factory-svgrepo-com.svg" alt="Factories Support" width="70px" height="70px" />
                     <h5 class="special-font mt-5 fs-2">Factories</h5>
                     <p class="pb-4">We help factories transition to sustainable practices, enhancing efficiency while reducing environmental impact.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="inner rounded-3 py-5 pb-4 px-3">
-                    <img src="./assets/dollar-finance-money-4-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
+                    <img src="./assets/dollar-finance-money-4-svgrepo-com.svg" alt="Loan Application" width="70px" height="70px" />
                     <h5 class="special-font mt-5 fs-2">Apply on a loan</h5>
                     <p class="pb-4">We empower farmers with access to agricultural loans through smart solutions, supporting sustainable farming, improved productivity, and stronger communities in rural agricultural areas.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="inner rounded-3 py-5 px-3">
-                    <img src="./assets/honey-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
+                    <img src="./assets/honey-svgrepo-com.svg" alt="Apiary license" width="70px" height="70px" />
                     <h5 class="special-font mt-5 fs-2">Apply on apiary license</h5>
                     <p class="pb-4">We support beekeepers with efficient tools and practices that promote responsible apiary growth, healthier pollinators, and sustainability in agriculture and nature.</p>
                 </div>
