--- a/greenly/src/app/components/services/services.component.html
+++ b/greenly/src/app/components/services/services.component.html
@@ -1,1 +1,28 @@
-<p>services works!</p>
+<section>
+    <div class="container py-5 text-center">
+        <h1 class="special-font">Our Services</h1>
+        <div class="row my-4 justify-content-center g-4">
+            <div class="col-md-4">
+                <div class="inner rounded-3 p-5  d-flex flex-column align-items-start justify-content-evenly cursor-pointer">
+                    <img src="./assets/dollar-finance-money-4-svgrepo-com.svg" alt="Farmer Working" width="70px" height="70px" />
+                    <h5 class="special-font  fs-1 text-start">Apply on a loan</h5>
+                    <p class="text-start">We cultivate growth with solutions that support farmers in securing agricultural loans, fostering sustainable farming and a thriving rural economy.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="inner rounded-3 p-5 pb-2 d-flex flex-column align-items-start justify-content-evenly cursor-pointer">
+                    <img src="./assets/honey-svgrepo-com.svg" alt="Apiary" width="70px" height="70px" />
+                    <h5 class="special-font  fs-1 text-start">Apply on apiary licence</h5>
+                    <p class="text-start">We empower sustainable beekeeping with solutions that support responsible apiary management, ensuring healthier pollinators and a thriving environment.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="inner rounded-3 p-5  d-flex flex-column align-items-start justify-content-evenly cursor-pointer" routerLink="/blog">
+                    <img src="./assets/message-square-svgrepo-com.svg" alt="Blog" width="70px" height="70px" />
+                    <h5 class="special-font  fs-1 text-start">Blog</h5>
+                    <p class="text-start">Explore insights and innovations in sustainable beekeeping, supporting responsible apiary management for healthier pollinators and a thriving environment.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
