--- a/greenly/src/app/components/navbar/navbar.component.css
+++ b/greenly/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,12 @@
 ul li{
     font-size: 14px;
 }
+.btn-special{
+    background-color: #F0F0F0;
+    border: 1px solid #177E39;
+    transition: all 0.3s ease-in-out;
+}
+.btn-special:hover{
+    box-shadow: 0 0 10px #81E084;
+    
+}
