--- a/greenly/src/app/components/navbar/navbar.component.html
+++ b/greenly/src/app/components/navbar/navbar.component.html
@@ -28,9 +28,15 @@
             <a class="nav-link cursor-pointer fw-bold">Contact Us</a>
           </li>
         </ul>
-        <div class="nav-buttons me-4">
-            <button class="btn btn-success special-font-i rounded-3 px-3 py-1" type="button" routerLink="login">Log In <img src="./assets/arrow-up-right-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
+        @if(_AuthService.isLoggedIn()) {
+          <button class="btn-special rounded-3 px-3 py-1 rounded-5" type="button"><img src="./assets/user-svgrepo-green-com.svg" width="30px" height="30px"/>Profile</button>
+          <button class="btn-special rounded-3 px-3 py-1 rounded-5 mx-2" type="button"><img src="./assets/cart-plus-svgrepo-com.svg" width="30px" height="30px"/>Cart</button>
+          <button class="btn btn-success rounded-3 px-3" type="button" routerLink="login" (click)="logOut()">Log Out<img src="./assets/logout-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
+        }@else{
+          <div class="nav-buttons me-4">
+            <button class="btn btn-success rounded-3 px-3 py-1" type="button" routerLink="login">Log In <img src="./assets/arrow-up-right-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
         </div>
+        }
       </div>
     </div>
   </nav>
