--- a/greenly/src/app/components/navbar/navbar.component.css
+++ b/greenly/src/app/components/navbar/navbar.component.css
@@ -7,6 +7,16 @@ ul li{
     transition: all 0.3s ease-in-out;
 }
 .btn-special:hover{
-    box-shadow: 0 0 10px #81E084;
-    
+    box-shadow: 0 0 10px #81E084; 
+}
+.cart-counter{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: -10px;
+    right: 0;
+    color: white;
 }
