product details component added, design done

--- a/greenly/src/app/components/shop/shop.component.html
+++ b/greenly/src/app/components/shop/shop.component.html
@@ -20,7 +20,8 @@
                             <span class="text-white position-absolute favorite-circle">
                                 <i class="fa-regular fa-heart text-main fs-3"></i>
                             </span>
-                            <img src="./assets/e8413db6e03814d36461d2211cfbdba5.jpeg"
+                            <div class="product-body" routerLink="/product-details">
+                                <img src="./assets/e8413db6e03814d36461d2211cfbdba5.jpeg"
                                 class="card-img-top rounded-bottom-2" alt="product-img">
                             <div class="card-body">
                                 <div class="top-content d-flex justify-content-between align-items-center my-2">
@@ -45,6 +46,7 @@
                                             width="35px" height="35px" fill="#177E39">
                                     </span>
                                 </div>
+                            </div>
                             </div>
                         </div>
                     </div>
