cart design done,loan and apiary licence component added and routing modified

--- a/greenly/src/app/components/product-details/product-details.component.html
+++ b/greenly/src/app/components/product-details/product-details.component.html
@@ -27,9 +27,12 @@
                         <span class="text-main">125</span>
                     </div>
                 </div>
-                <div class="product-description w-75 my-4 text-secondary fw-semibold">
-                    Compost is rich, natural soil made from decomposed organic waste. It enhances soil health, supports
-                    plant growth, and reduces environmental impact.
+                <div class="product-description w-75 my-4">
+                    <p class="text-secondary fw-semibold">
+                        Compost is rich, natural soil made from decomposed organic waste. It enhances soil health,
+                        supports
+                        plant growth, and reduces environmental impact.
+                    </p>
                 </div>
                 <div class="add-to-cart-btn mt-5 pt-5 d-flex justify-content-between align-items-center">
                     <div class="product-rating">
