loan design done,not found done,favorites design done, routing modified

--- a/greenly/src/app/components/cart/cart.component.css
+++ b/greenly/src/app/components/cart/cart.component.css
@@ -1,4 +1,10 @@
+.item-counter{
+    border: 1px solid #177E39;
+    width: 18%;
+    padding-block: 5px;
+    box-shadow: 0 0 10px #81E084; 
+
+}
 .item-counter button{
-    background-color: #00000080;
     border: none;
 }
