--- a/greenly/src/app/components/cart/cart.component.html
+++ b/greenly/src/app/components/cart/cart.component.html
@@ -29,12 +29,12 @@
                         supports
                         plant growth, and reduces environmental impact.
                     </p>
-                    <div class="item-counter p-2 rounded-5 d-flex justify-content-center align-items-center ms-auto w-25">
-                        <button class="btn btn-secondary rounded-circle p-3 d-flex justify-content-center align-items-center">
+                    <div class="item-counter rounded-3 d-flex justify-content-center align-items-center ms-auto">
+                        <button class="btn btn-secondary rounded-3 p-3 d-flex justify-content-center align-items-center bg-main">
                             <img src="./assets/minus-svgrepo-com.svg" alt="counter-minus" width="12px" height="12px">
                         </button>
                         <span class="mx-3 text-main fw-bolder fs-4">1</span>
-                        <button class="btn btn-secondary rounded-circle p-3 d-flex justify-content-center align-items-center">
+                        <button class="btn btn-secondary rounded-3 p-3 d-flex justify-content-center align-items-center bg-main">
                             <img src="./assets/plus-svgrepo-com.svg" alt="counter-plus" width="12px" height="12px">
                         </button>
                     </div>
@@ -65,12 +65,12 @@
                         supports
                         plant growth, and reduces environmental impact.
                     </p>
-                    <div class="item-counter p-2 rounded-5 d-flex justify-content-center align-items-center ms-auto w-25">
-                        <button class="btn btn-secondary rounded-circle p-3 d-flex justify-content-center align-items-center">
+                    <div class="item-counter rounded-3 d-flex justify-content-center align-items-center ms-auto">
+                        <button class="btn btn-secondary rounded-3 p-3 d-flex justify-content-center align-items-center bg-main">
                             <img src="./assets/minus-svgrepo-com.svg" alt="counter-minus" width="12px" height="12px">
                         </button>
                         <span class="mx-3 text-main fw-bolder fs-4">1</span>
-                        <button class="btn btn-secondary rounded-circle p-3 d-flex justify-content-center align-items-center">
+                        <button class="btn btn-secondary rounded-3 p-3 d-flex justify-content-center align-items-center bg-main">
                             <img src="./assets/plus-svgrepo-com.svg" alt="counter-plus" width="12px" height="12px">
                         </button>
                     </div>
