--- a/greenly/src/app/components/loan/loan.component.html
+++ b/greenly/src/app/components/loan/loan.component.html
@@ -5,8 +5,8 @@
             <div class="row pt-5 pb-3 g-3">
                 <div class="col-md-4">
                     <div class="mb-3">
-                        <label for="email" class="form-label fs-4 special-font">Email address</label>
-                        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                        <label for="age" class="form-label fs-4 special-font">Age</label>
+                        <input type="number" class="form-control" id="age" placeholder="22">
                     </div>
                 </div>
                 <div class="col-md-4">
