images srcs edited

--- a/greenly/src/app/components/product-details/product-details.component.html
+++ b/greenly/src/app/components/product-details/product-details.component.html
@@ -5,15 +5,15 @@
                 <div class="product-slider">
                     <owl-carousel-o [options]="productSlider">
                         <ng-template carouselSlide>
-                            <img src="../../../assets/e8413db6e03814d36461d2211cfbdba5.jpeg" alt="Slide 1"
+                            <img src="./assets/e8413db6e03814d36461d2211cfbdba5.jpeg" alt="Slide 1"
                                 class="w-100 rounded-2" />
                         </ng-template>
                         <ng-template carouselSlide>
-                            <img src="../../../assets/e8413db6e03814d36461d2211cfbdba5.jpeg" alt="Slide 1"
+                            <img src="./assets/e8413db6e03814d36461d2211cfbdba5.jpeg" alt="Slide 1"
                                 class="w-100 rounded-2" />
                         </ng-template>
                         <ng-template carouselSlide>
-                            <img src="../../../assets/e8413db6e03814d36461d2211cfbdba5.jpeg" alt="Slide 1"
+                            <img src="./assets/e8413db6e03814d36461d2211cfbdba5.jpeg" alt="Slide 1"
                                 class="w-100 rounded-2" />
                         </ng-template>
                     </owl-carousel-o>
@@ -47,6 +47,9 @@
                         </span>
                         <span>
                             <i class="fa-solid fa-star-half" style="color: #FFD43B;"></i>
+                        </span>
+                        <span>
+                            3.3
                         </span>
                     </div>
                     <button class="btn rounded-5 btn-special px-4">
