--- a/greenly/src/app/components/apiary-licence/apiary-licence.component.html
+++ b/greenly/src/app/components/apiary-licence/apiary-licence.component.html
@@ -1,1 +1,6 @@
-<p>apiary-licence works!</p>
+<section>
+    <div class="container py-5">
+        <h1 class="special-font text-center">Apiary licence Application</h1>
+        <h2>sss</h2>
+    </div>
+</section>
